# mitma-sedona

./: .gitignore  LICENSE  NEXT_STEPS.md  NOTES_FROM_PROTOTYPE_RUN.md  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
configs/: weights.yaml
data/: README.md
data/gold/: h3_res8_catalonia.parquet
docker/: Dockerfile.jupyter  docker-compose.yml  valhalla.json
docs/: architecture.md  catalonia_liveability.html  data_sources.md  explore.html  explore_v2.html  flows.html  index.html  local_env_setup.md  preview_deck.html  quickstart.md  results.md  scoring.md  sedona_sql_patterns.md  ui_test_plan.md  v2_build_playbook.md  v2_revision.md  visualization.md  why_spark_sedona.md
docs/app/: explore.css  geobrowser-map.js
docs/app/flows_fm/: main.js
docs/research/: 2026-06-20-fullset-flowmap-duckdb-deckgl.md
docs/story_data/: arcs.json  manifest.json
docs/story_data/flows_fm/: feb_weekday.json  (+7 more)
docs/story_data_10km/: manifest.json
docs/story_data_v2/: arcs.json  manifest.json  pois.json
notebooks/: 01_data_ingest.ipynb  01_data_ingest.py  02_liveability_layer.ipynb  02_liveability_layer.py  03_score_and_visualise.ipynb  03_score_and_visualise.py  04_descriptives.ipynb  04_descriptives.py  _fallback_gold.py  preview_storyboard.md
notebooks/rendered/: 01_data_ingest.ipynb  01_data_ingest.md  02_liveability_layer.ipynb  02_liveability_layer.md  03_score_and_visualise.ipynb  03_score_and_visualise.md  04_descriptives.ipynb  04_descriptives.md
scripts/: _fetch_gbif_biodiversity.py  build_mitma_layers.py  build_story.py  export_mitma_layers.py  export_od_flows_fm.py  export_story_payload.py  export_story_payload_v2.py  fetch_air.sh  fetch_air_v2.sh  fetch_gtfs.sh  fetch_gtfs_v2.sh  fetch_mitma.sh  fetch_nature.sh  fetch_osm.sh  fetch_pollution.sh  fetch_thermal.sh  fetch_zoning.sh  pull_mitma_window.sh  run_full_scale.sh  run_gold_10km.py  run_gold_v2.py  run_mitma_pipeline.py  score_10km.py  score_v2.py  ui_test.sh
site/content/: chapters.json
site/engine/: story-map.js  story.css  story.template.html
src/catmob/: __init__.py  h3_utils.py  io_air.py  io_biodiversity.py  io_gtfs.py  io_health.py  io_mitma.py  io_osm.py  io_pollution.py  io_thermal.py  isochrones.py  pipeline_bronze.py  pipeline_gold.py  pipeline_silver.py  schemas.py  scoring.py  spark.py  stats.py  viz.py
tests/: README.md  conftest.py  test_geo_invariants.py  test_io_air.py  test_io_mitma.py  test_io_osm.py  test_schemas.py  test_spark_smoke.py
tests/fixtures/: mitma_daily_sample.csv  mitma_hourly_sample.csv  mitma_zones_sample.geojson  xvpca_stations_sample.csv
tests/ui/: .gitignore  README.md  capture-flows-hero.mjs  package.json  run-flowmap-keyseq.mjs  run-flowmap-phase1.mjs  run-flowmap-phase3.mjs  run-slice.mjs  smoke.mjs  tests.json
(+14 files in other folders)
