[project]
name = "catmob"
version = "0.1.0"
description = "Catalonia Liveability × Mobility — multi-criteria scoring on Sedona/Spark with MITMA + OSM + environmental layers"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "Nelson Silvestre Vasconcelos" }]
keywords = ["geospatial", "sedona", "spark", "mitma", "osm", "h3", "catalonia", "liveability", "mobility"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]

# Floor pins. Install latest at setup time; downgrade only if a known
# incompatibility surfaces (see PLAN.md §3 fallback playbook).
dependencies = [
    "apache-sedona[spark]>=1.9",
    "pyspark>=3.5,<5.0",
    "lonboard>=0.16",
    "pydeck>=0.9",
    "h3>=4",
    "pyarrow>=17",
    "geopandas>=1.0",
    "shapely>=2.0",
    "pandera[pandas]>=0.20",
    "pandas>=2.2",
    "pyrosm>=0.6",
    "pystac-client>=0.7",
    "rasterio>=1.3",
    "xarray>=2024.1",
    "requests>=2.31",
    "pyyaml>=6.0",
    "ipywidgets>=8.1",
    "altair>=5.3",
    "matplotlib>=3.8",
    "tqdm>=4.66",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-benchmark>=4.0",
    "nbmake>=1.5",
    "ruff>=0.5",
]
dev = [
    "jupytext>=1.16",
    "jupyterlab>=4.2",
    "ipykernel>=6.29",
]

[project.urls]
Homepage = "https://github.com/lunasilvestre/mitma-sedona"
Repository = "https://github.com/lunasilvestre/mitma-sedona"
Issues = "https://github.com/lunasilvestre/mitma-sedona/issues"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/catmob"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "D"]
ignore = [
    "D100", "D101", "D102", "D103", "D104", "D105", "D107",  # docstring requirements (relax for now)
    "D203", "D213",  # conflicting docstring style choices
    "B008",          # function call in default argument (common in Sedona helpers)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "B"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.jupytext]
formats = "ipynb,py:percent"
notebook_metadata_filter = "-jupytext.text_representation.jupytext_version"
